# head_manager

./: CMakeLists.txt  README.md  package.xml  stack.sh  stack_simu.sh
cfg/: goal_directed_dyn_param.cfg  reactive_dyn_param.cfg  stimulus_driven_dyn_param.cfg
include/head_manager/: HeadManagerException.h
launch/: input_setup.launch  reactive_setup.launch  signaling_setup.launch
msg/: AttentionStamped.msg  Focus.msg  MapStamped.msg  Signal.msg
param/: object_offset.yaml  reactive_param.yaml
src/: activity_states_faker.cpp  cognitive_inibition.cpp  cognitive_orientation.cpp  goal_directed_attention.cpp  head_driver.cpp  mocap_calib.cpp  robot_observer_1.0.cpp  robot_observer_2.5.cpp  robot_observer_3.5.cpp  robot_observer_one.cpp  robot_observer_three.cpp  robot_observer_two.cpp  salient_stimuli_selection.cpp  sensitive_reorientation.cpp  stimulus_driven_attention.cpp
srv/: Action.srv  InhibitionOfReturn.srv  Sync.srv
